[package]
name = "yumy"
description = "a straightforward diagnostics rendering crate."
version = "0.3.1"
edition = "2021"
authors = ["vxpm"]
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["error", "diagnostics", "report", "formatting", "lang-dev"]
categories = ["command-line-interface"]
repository = "https://github.com/vxpm/yumy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strip-ansi-escapes = "0.2"
nonmax = "0.5"
owo-colors = "4.1"
unicode-segmentation = "1.12"
unicode-width = "0.2"

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
